Corregido actividades programadas

--- a/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
+++ b/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header text-center">Bitácora del Cuidador</h1>
-            <h2>{{caregiver.name}} {{caregiver.lastName}} {{caregiver.lastNameSecond}}</h2>
+            <!-- <h2>{{caregiver.name}} {{caregiver.lastName}} {{caregiver.lastNameSecond}}</h2> -->
         </div>
     </div>
 
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="form-group">
-                    <p>Conteste las siguientes afirmaciones, según se haya sentido el día de hoy.</p>
+                    <p>Conteste las siguientes afirmaciones con base en su labor como cuidador primario o familiar directo.</p>
                 </div>
             </div>
         </div>
