Modificación Bitacora cuidador

--- a/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
+++ b/src/app/pages/binnaclecaregiver/binnaclecaregiver.component.html
@@ -37,7 +37,7 @@
                             <div><input type="radio" [value]=3 name="respuesta2" formControlName="respuesta2"> Si</div>
                         </div>
                         <div class="col-sm-4">
-                            <label>3. Tengo la cabeza llena de preocupaciones:</label>
+                            <label>3. Tuve la cabeza llena de preocupaciones:</label>
                             <div><input type="radio" [value]=1 name="respuesta3" formControlName="respuesta3"> No</div>
                             <div><input type="radio" [value]=2 name="respuesta3" formControlName="respuesta3"> Poco</div>
                             <div><input type="radio" [value]=3 name="respuesta3" formControlName="respuesta3"> Si</div>
@@ -58,10 +58,10 @@
                             <div><input type="radio" [value]=3 name="respuesta5" formControlName="respuesta5"> Si</div>
                         </div>
                         <div class="col-sm-3">
-                            <label>6. Tuve tiempo para dormir:</label>
-                            <div><input type="radio" [value]=1 name="respuesta6" formControlName="respuesta6"> No</div>
-                            <div><input type="radio" [value]=2 name="respuesta6" formControlName="respuesta6"> Poco</div>
-                            <div><input type="radio" [value]=3 name="respuesta6" formControlName="respuesta6"> Si</div>
+                            <label>6. Mis horas de sueño fueron:</label>
+                            <div><input type="radio" [value]=1 name="respuesta6" formControlName="respuesta6"> Menos de 6</div>
+                            <div><input type="radio" [value]=2 name="respuesta6" formControlName="respuesta6"> 6 o 7</div>
+                            <div><input type="radio" [value]=3 name="respuesta6" formControlName="respuesta6"> 8 o más</div>
                         </div>
                         <div class="col-sm-3">
                             <label>7. Tuve tiempo para mi pareja y familia:</label>
@@ -85,13 +85,13 @@
                             <div><input type="radio" [value]=3 name="respuesta9" formControlName="respuesta9"> Si</div>
                         </div>
                         <div class="col-sm-3">
-                            <label>10. Tuve interacción con mis hermanos:</label>
+                            <label>10. Tuve comunicación con mis hermanos:</label>
                             <div><input type="radio" [value]=1 name="respuesta10" formControlName="respuesta10"> No</div>
                             <div><input type="radio" [value]=2 name="respuesta10" formControlName="respuesta10"> Poco</div>
                             <div><input type="radio" [value]=3 name="respuesta10" formControlName="respuesta10"> Si</div>
                         </div>
                         <div class="col-sm-3">
-                            <label>11. Tengo suficiente apoyo económico:</label>
+                            <label>11. Tuve el soporte económico:</label>
                             <div><input type="radio" [value]=1 name="respuesta11" formControlName="respuesta11"> No</div>
                             <div><input type="radio" [value]=2 name="respuesta11" formControlName="respuesta11"> Poco</div>
                             <div><input type="radio" [value]=3 name="respuesta11" formControlName="respuesta11"> Si</div>
