--- a/src/app/pages/self-diagnosis/self-diagnosis.component.html
+++ b/src/app/pages/self-diagnosis/self-diagnosis.component.html
@@ -2,12 +2,13 @@
 
 <div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
 
-    <div class="jumbotron">
-        <h1>Auto Diagnóstico</h1>
-        <h3><strong>Nombre: </strong>{{caregiver.name}} {{caregiver.lastName}} {{caregiver.lastNameSecond}}</h3>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header text-center">Auto Diagnóstico</h1>
+            <h3><strong>Nombre: </strong>{{caregiver.name}} {{caregiver.lastName}} {{caregiver.lastNameSecond}}</h3>
+        </div>
     </div>
-
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
                 <div class="form-group">
