--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -29,6 +29,7 @@
         <li routerLinkActive="active"><a routerLink="/dailyrecords"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
         <li routerLinkActive="active"><a routerLink="/activityprogram"><em class="fa fa-calendar">&nbsp;</em> Actividades en Casa </a></li>
         <li routerLinkActive="active"><a routerLink="/caregivers"><em class="fa fa-address-book">&nbsp;</em> Familiares</a></li>
+        <li routerLinkActive="active"><a routerLink="/valorations"><em class="fa fa-address-book">&nbsp;</em> Valoraciones</a></li>
         <li routerLinkActive="active"><a routerLink="/catalogs"><em class="fa fa-cog">&nbsp;</em> Catálogos App </a></li>
         <li routerLinkActive="active"><a routerLink="/users"><em class="fa fa-users">&nbsp;</em> Usuarios</a></li>
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
