--- a/src/app/pages/valorations/valorations.component.html
+++ b/src/app/pages/valorations/valorations.component.html
@@ -21,10 +21,10 @@
                             <div class="row text-center">
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label for="period">Periodo:</label>
-                                        <select class="form-control" formControlName="period" id="period">
-                              <option value="1">1er. Semestre</option>
-                              <option value="2">2do. Semestre</option>
+                                        <label for="numPeriod">Periodo:</label>
+                                        <select class="form-control" formControlName="numPeriod" id="numPeriod">
+                              <option value=1>1er. Semestre</option>
+                              <option value=2>2do. Semestre</option>
                             </select>
                                     </div>
                                 </div>
@@ -63,8 +63,7 @@
                         <tbody>
                             <tr *ngFor="let v of valorations">
                                 <td>{{v.year }}</td>
-                                <td *ngIf="v.period=='1'">1er. Semestre</td>
-                                <td *ngIf="v.period=='2'">2do. Semestre</td>
+                                <td>{{v.period }}</td>
                                 <td *ngIf="v.status">Activo</td>
                                 <td *ngIf="!v.status">Inactivo</td>
                                 <td>
