--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -45,7 +45,7 @@
         <li routerLinkActive="active"><a routerLink="/binnaclecaregiver"><em class="fa fa-vcard-o">&nbsp;</em> Mi Bitácora </a></li>
         <li routerLinkActive="active"><a routerLink="/binnaclepatient"><em class="fa fa-vcard">&nbsp;</em> Bitácora Adulto </a></li>
         <li routerLinkActive="active"><a routerLink="/dailyrecordspatient"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
-        <li routerLinkActive="active"><a routerLink="/autodiagnosis"><em class="fa fa-edit">&nbsp;</em> Auto Diagnóstico </a></li>
+        <li routerLinkActive="active"><a routerLink="/autodiagnosis"><em class="fa fa-edit">&nbsp;</em> Valoración Psicológica </a></li>
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
     </ul>
 </div>
