--- a/src/app/pages/self-diagnosis/self-diagnosis.component.html
+++ b/src/app/pages/self-diagnosis/self-diagnosis.component.html
@@ -9,6 +9,14 @@
         </div>
     </div>
     <div class="container-fluid">
+        <div class="row text-right">
+            <div class="col">
+                <button class="btn btn-danger" routerLink="/autodiagnosis">
+                    <i class="fa fa-arrow-left"></i>
+                    Regresar
+                </button>
+            </div>
+        </div>
         <div class="row">
             <div class="col-sm-10">
                 <div class="form-group">
