--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -32,12 +32,14 @@
         <li routerLinkActive="active"><a routerLink="/valorations"><em class="fa fa-address-book">&nbsp;</em> Valoraciones</a></li>
         <li routerLinkActive="active"><a routerLink="/catalogs"><em class="fa fa-cog">&nbsp;</em> Catálogos App </a></li>
         <li routerLinkActive="active"><a routerLink="/users"><em class="fa fa-users">&nbsp;</em> Usuarios</a></li>
+        <li routerLinkActive="active"><a routerLink="/changepass"><em class="fa fa-gear">&nbsp;</em> Cambiar Contraseña </a></li>
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
     </ul>
     <ul *ngIf="user.role=='ENFERMERIA' || user.role=='HIGIENE' || user.role=='FISIOTERAPIA' || user.role=='FASE_INICIAL' || user.role=='FASE_INTERMEDIA' || user.role=='FASE_AVANZADA' || user.role=='NUTRICION'" class="nav menu">
         <li routerLinkActive="active"><a routerLink="/home"><em class="fa fa-home">&nbsp;</em> Inicio</a></li>
         <li routerLinkActive="active"><a routerLink="/dailyrecords"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
         <li routerLinkActive="active"><a routerLink="/activityprogram"><em class="fa fa-calendar">&nbsp;</em> Actividades en Casa </a></li>
+        <li routerLinkActive="active"><a routerLink="/changepass"><em class="fa fa-gear">&nbsp;</em> Cambiar Contraseña </a></li>
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
     </ul>
     <ul *ngIf="user.role=='FAMILIAR'" class="nav menu">
@@ -46,6 +48,7 @@
         <li routerLinkActive="active"><a routerLink="/binnaclepatient"><em class="fa fa-vcard">&nbsp;</em> Bitácora Adulto </a></li>
         <li routerLinkActive="active"><a routerLink="/dailyrecordspatient"><em class="fa fa-clipboard">&nbsp;</em> Registros diarios </a></li>
         <li routerLinkActive="active"><a routerLink="/autodiagnosis"><em class="fa fa-edit">&nbsp;</em> Valoración Psicológica </a></li>
+        <li routerLinkActive="active"><a routerLink="/changepass"><em class="fa fa-gear">&nbsp;</em> Cambiar Contraseña </a></li>
         <li routerLinkActive="active"><a routerLink="/login" (click)="salir()"><em class="fa fa-power-off">&nbsp;</em> Cerrar sesión</a></li>
     </ul>
 </div>
