Ver las valoraciones realizadas

--- a/src/app/pages/autodiagnosis/autodiagnosis.component.html
+++ b/src/app/pages/autodiagnosis/autodiagnosis.component.html
@@ -32,7 +32,7 @@
                         </div>
 
 
-                        <table *ngIf="!cargando && mostrar" class="table mt-3 table-hover animated fadeIn">
+                        <table *ngIf="mostrar" class="table mt-3 table-hover animated fadeIn">
                             <thead class="thead-dark">
                                 <tr>
                                     <th scope="col">#</th>
