--- a/src/app/pages/patients/patients.component.html
+++ b/src/app/pages/patients/patients.component.html
@@ -35,9 +35,9 @@
                     <td>{{ patient.birthdate |date:"dd-MM-yyyy" }}</td>
                     <td>{{ patient.phase }}</td>
                     <td>
-                        <!-- <button class="btn btn-info mr-1" [routerLink]="['/patient', patient._id ]">
-                            <i class="fa fa-pencil"></i>
-                        </button> -->
+                        <button class="btn btn-info mr-1" ngbTooltip="Bitácora" [routerLink]="['/binnaclespatient', patient._id ]">
+                            <i class="fa fa-book"> Bitácora</i>
+                        </button>
                         <button class="btn btn-danger mr-1" (click)="bajaPatient( patient, i )">
                             <i class="fa fa-arrow-down"></i>
                         </button>
