Bitácora de actividades en casa

--- a/src/app/pages/binnaclepatientevaluation/binnaclepatientevaluation.component.html
+++ b/src/app/pages/binnaclepatientevaluation/binnaclepatientevaluation.component.html
@@ -86,7 +86,7 @@
                             <div><input type="radio" [value]=3 name="respuesta2" formControlName="respuesta2"> Excelente desempeño</div>
                         </div>
                         <div class="col-sm-3">
-                            <label>3. Su Estado de ánimo antes de la actividad era:</label>
+                            <label>3. Su Estado de ánimo después de la actividad fue:</label>
                             <div><input type="radio" [value]=1 name="respuesta3" formControlName="respuesta3"> Negativo</div>
                             <div><input type="radio" [value]=2 name="respuesta3" formControlName="respuesta3"> Neutral</div>
                             <div><input type="radio" [value]=3 name="respuesta3" formControlName="respuesta3"> Positivo</div>
