--- a/src/app/pages/binnaclesactivitypatient/binnaclesactivitypatient.component.html
+++ b/src/app/pages/binnaclesactivitypatient/binnaclesactivitypatient.component.html
@@ -4,7 +4,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Bitácora del Paciente</h1>
+            <h1 class="page-header">Bitácora de actividades en casa</h1>
             <h3><strong>Nombre: </strong>{{patient.name}} {{patient.lastName}} {{patient.lastNameSecond}}</h3>
         </div>
     </div>
@@ -28,16 +28,18 @@
                         <thead>
                             <tr>
                                 <th scope="col">Fecha</th>
-                                <th scope="col">Paciente</th>
+                                <th scope="col">Tipo</th>
+                                <th scope="col">Actividad</th>
                                 <th scope="col">Opciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr *ngFor="let b of binnacles">
                                 <td>{{b.date | date:"dd-MM-yyyy" }}</td>
-                                <td>{{b.patient.name}} {{b.patient.lastName}} {{b.patient.lastNameSecond}}</td>
+                                <td>{{b.activity.type}}</td>
+                                <td>{{b.activity.activity}}</td>
                                 <td>
-                                    <button class="btn btn-info mr-1" [routerLink]="['/binnaclepatientdetail', b._id ]">
+                                    <button class="btn btn-info mr-1" [routerLink]="['/binnacleactivitypatientdetail', b._id ]">
                                           <i class="fa fa-search"> Ver detalle...</i>
                                       </button>
                                 </td>
