--- a/src/app/pages/binnaclepatient/binnaclepatient.component.html
+++ b/src/app/pages/binnaclepatient/binnaclepatient.component.html
@@ -12,45 +12,43 @@
 
     <div class="container-fluid">
 
-        <hr>
-
-        <div class="row animated fadeIn faster col-sm-12">
+        <div class="row animated fadeIn faster">
             <h3 class="card-header">Actividades programadas </h3>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">Fecha</th>
-                        <th scope="col">Tipo de Actividad</th>
-                        <th scope="col">Actividad</th>
-                        <th scope="col">Instrucciones</th>
-                        <th scope="col">Opciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let p of programadas; let i = index">
-                        <td>{{p.date |date:"dd/MM/yyyy" }}</td>
-                        <td>{{p.type}}</td>
-                        <td>{{p.activity}}</td>
-                        <td>{{p.instructions}}</td>
-                        <td>
+            <div class="col">
+                <table class="table mt-3 table-hover animated fadeIn">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Fecha</th>
+                            <th scope="col">Tipo de Actividad</th>
+                            <th scope="col">Actividad</th>
+                            <th scope="col">Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let p of programadas; let i = index">
+                            <td>{{p.date |date:"dd/MM/yyyy" }}</td>
+                            <td>{{p.type}}</td>
+                            <td>{{p.activity}}</td>
+                            <td>
 
-                            <button class="btn btn-info mr-1 " (click)="evaluarBitacora( p, i ) ">
-                              <i class="fa fa-edit "> Evaluar</i>
-                          </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
+                                <button class="btn btn-info mr-1 " (click)="evaluarBitacora( p, i ) ">
+                                    <i class="fa fa-edit "> Evaluar</i>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <hr>
 
-        <div class="row animated fadeIn faster col-sm-12">
+        <br>
+
+        <div class="row animated fadeIn faster">
             <h3 class="card-header">Bitácora diaria </h3>
 
             <form [formGroup]="forma" (ngSubmit)="guardar()" novalidate="novalidate">
 
-                <div class="row text-center">
+                <div class="row">
                     <div class="col-sm-4">
                         <div class="form-group">
                             <label>Fecha</label>
@@ -78,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row text-center"></div>
+                <div class="row"></div>
                 <div class="col-sm-4">
                     <div class="form-group">
                         <label for="sleep">Horas de sueño:</label>
